--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
+osx_image: xcode7
+xcode_sdk: iphonesimulator9.0
 language: objective-c
-osx_image: xcode6.4
-script:
-- cd BFKitDemo
-- xcodebuild build -scheme BFKitDemo -destination 'platform=iOS Simulator,name=iPhone 6,OS=8.4'
+xcode_project: BFKitDemo/BFKitDemo.xcodeproj
+xcode_scheme: BFKitDemo
