--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-osx_image: xcode7
-xcode_sdk: iphonesimulator9.0
+osx_image: xcode7.2b1
+xcode_sdk: iphonesimulator9.2
 language: objective-c
 xcode_project: BFKitDemo/BFKitDemo.xcodeproj
 xcode_scheme: BFKitDemo
