--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-osx_image: xcode7.2b1
+osx_image: xcode7.2
 xcode_sdk: iphonesimulator9.2
 language: objective-c
 xcode_project: BFKitDemo/BFKitDemo.xcodeproj
