--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-osx_image: xcode7.2
-xcode_sdk: iphonesimulator9.2
 language: objective-c
-xcode_project: BFKitDemo/BFKitDemo.xcodeproj
-xcode_scheme: BFKitDemo
+osx_image: xcode7.3
+
+script:
+  - xctool -project BFKitDemo/BFKitDemo.xcodeproj -scheme BFKitDemo -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO
+  - xctool -project BFKit/BFKit.xcodeproj -scheme BFKit -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO
+  - carthage update
